Add deployment config for Railway and Vercel