@@ -1,35 +1,27 @@
 package jamescresslawn.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
-/**
- * CORS = Cross-Origin Resource Sharing
- *
- * By default, browsers block requests from one domain to another.
- * Your React frontend runs on http://localhost:5173
- * Your backend runs on http://localhost:8080
- * These are different origins, so the browser blocks it.
- *
- * This config tells the browser: "it's okay, the backend allows requests from the frontend"
- */
 @Configuration
 public class CorsConfig {
+
+    @Value("${cors.allowed-origins:http://localhost:5173,http://localhost:3000}")
+    private String allowedOriginsStr;
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Allow your React frontend origin
-        config.setAllowedOrigins(List.of(
-                "http://localhost:5173",  // Vite dev server
-                "http://localhost:3000"   // Create React App dev server
-        ));
+        List<String> origins = Arrays.asList(allowedOriginsStr.split(","));
+        config.setAllowedOrigins(origins);
 
         // Allow these HTTP methods
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
